--- a/css/style.css
+++ b/css/style.css
@@ -97,9 +97,9 @@ body::before {
 .logo-container {
     width: 100px;
     height: 100px;
-    background-color: #004225; /* Verde escuro elegante */
-    background: rgba(255, 255, 255, 0.95);
-    border-radius: 50%;
+    background-color: #004225; /* Fundo verde escuro */
+    padding: 10px;
+    border-radius: 50%; 
     margin: 0 auto 20px;
     display: flex;
     align-items: center;
@@ -109,7 +109,6 @@ body::before {
     z-index: 3;
     transition: transform 0.3s ease;
 }
-
 
 .logo-container:hover {
     transform: scale(1.05);
